# ReceiptAggregator

./: .gitignore  README.md  pyproject.toml  roc_curve.py  testing.py
src/receiptaggregator/: __init__.py  eml_loader.py  invoice_classification.py  models.py  receipt_extractor.py  receipt_matcher.py  string_similarity.py
